--- a/plugins/activedirectory/locale/ko/webyast-activedirectory.po
+++ b/plugins/activedirectory/locale/ko/webyast-activedirectory.po
@@ -1,71 +1,82 @@
-# Copyright (C) 2006 SuSE Linux Products GmbH, Nuernberg
-# This file is distributed under the same license as the package.
-#
 msgid ""
 msgstr ""
-"Project-Id-Version: webyast-activedirectory-ui\n"
-"POT-Creation-Date: 2010-08-18 10:18+0200\n"
-"PO-Revision-Date: 2010-08-26 09:28\n"
-"Last-Translator: Novell Language <language@novell.com>\n"
-"Language-Team: Novell Language <language@novell.com>\n"
+"Project-Id-Version: entries\n"
+"Report-Msgid-Bugs-To: \n"
+"POT-Creation-Date: 2012-06-07 15:20+0200\n"
+"PO-Revision-Date: 2006-06-12 16:56+0100\n"
+"Last-Translator: \n"
+"Language-Team:  <en@li.org>\n"
+"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
 
-#: app/controllers/activedirectory_controller.rb:40 ./app/controllers/activedirectory_controller.rb:40
-msgid "Cannot read Active Directory client configuraton."
-msgstr "Active Directory 클라이언트 구성을 읽을 수 없습니다."
+msgid "Account settings"
+msgstr ""
 
-#: app/controllers/activedirectory_controller.rb:55 ./app/controllers/activedirectory_controller.rb:55
-msgid "Active Directory client configuraton successfully written."
-msgstr "Active Directory 클라이언트 구성이 성공적으로 작성되었습니다."
-
-#: app/controllers/activedirectory_controller.rb:64 ./app/controllers/activedirectory_controller.rb:64
-msgid "Machine is not member of given domain. Enter the credentials needed for join."
-msgstr "시스템이 지정한 도메인에 속하지 않습니다. 참가에 필요한  자격 증명을 입력하십시오."
-
-#: app/controllers/activedirectory_controller.rb:70 ./app/controllers/activedirectory_controller.rb:70
-msgid "Error while joining Active Directory domain: %s"
-msgstr "Active Directory 도메인에 참가하는 중에 오류가 발생했습니다. %s"
-
-#: app/controllers/activedirectory_controller.rb:73 ./app/controllers/activedirectory_controller.rb:73
-msgid "Error while leaving Active Directory domain: %s"
-msgstr "Active Directory 도메인에서 탈퇴하는 중에 오류가 발생했습니다. %s"
-
-#: app/controllers/activedirectory_controller.rb:76 ./app/controllers/activedirectory_controller.rb:76
-msgid "Error while saving Active Directory client configuration."
-msgstr "Active Directory 클라이언트 구성을 저장하는 중에 오류가 발생했습니다."
-
-#: app/views/activedirectory/index.html.erb:32 ./app/views/activedirectory/index.html.erb:32
-msgid "This field is required."
-msgstr "이 필드는 필수입니다."
-
-#: app/views/activedirectory/index.html.erb:57 ./app/views/activedirectory/index.html.erb:57 ./shortcuts.yml:6
+#, fuzzy
+#| msgid "Home Directory"
 msgid "Active Directory"
-msgstr "Active Directory"
+msgstr "홈 디렉토리"
 
-#: app/views/activedirectory/index.html.erb:69 ./app/views/activedirectory/index.html.erb:69
-msgid "Enable Authentication of AD users"
-msgstr "AD 사용자 인증 사용"
-
-#: app/views/activedirectory/index.html.erb:72 ./app/views/activedirectory/index.html.erb:72
 msgid "Active Directory Domain"
-msgstr "Active Directory 도메인"
+msgstr ""
 
-#: app/views/activedirectory/index.html.erb:79 ./app/views/activedirectory/index.html.erb:79
-msgid "Adminstrator User Name"
-msgstr "관리자 사용자 이름"
+msgid "Active Directory client configuraton successfully written."
+msgstr ""
 
-#: app/views/activedirectory/index.html.erb:83 ./app/views/activedirectory/index.html.erb:83
-msgid "Password"
-msgstr "비밀번호"
+#, fuzzy
+#| msgid "Administrator Settings"
+msgid "Administrator User Name"
+msgstr "관리자 설정"
 
-#: app/views/activedirectory/index.html.erb:87 ./app/views/activedirectory/index.html.erb:87
+#, fuzzy
+#| msgid "Cannot write repository configuration"
+msgid "Cannot read Active Directory client configuraton."
+msgstr "저장소 구성을 기록할 수 없음"
+
+#, fuzzy
+#| msgid "Authentication scheme to use"
+msgid "Enable Authentication of AD users"
+msgstr "사용하는 인증 방법"
+
+#, fuzzy
+#| msgid "Error while modifying the repository:"
+msgid "Error while joining Active Directory domain: %s"
+msgstr "저장소 수정하는 동안 오류:"
+
+#, fuzzy
+#| msgid "Error while saving administrator settings: %s"
+msgid "Error while leaving Active Directory domain: %s"
+msgstr "관리자 설정을 저장하는 동안 오류: %s"
+
+#, fuzzy
+#| msgid "Try loading the default configuration."
+msgid "Error while saving Active Directory client configuration."
+msgstr "기존 구성을 불러오기 합니다."
+
+#, fuzzy
+#| msgid "account"
 msgid "Machine Account"
-msgstr "시스템 계정"
+msgstr "계정"
 
-#: ./shortcuts.yml:7
-msgid "Configure the connection to Active Directory"
-msgstr "Active Directory에 연결 구성"
+msgid "Machine is not member of given domain. Enter the credentials needed for join."
+msgstr ""
 
+# password dialog title
+msgid "Password"
+msgstr "열쇠글"
+
+msgid "Please wait"
+msgstr ""
+
+#, fuzzy
+#| msgid "The filename is required."
+msgid "This field is required."
+msgstr "파일이름이 필요합니다."
+
+#, fuzzy
+#~| msgid "Configure the current scheme."
+#~ msgid "Configure the connection to Active Directory"
+#~ msgstr "현재 전원관리계획을 구성합니다."
