--- a/plugins/activedirectory/locale/pt_BR/webyast-activedirectory.po
+++ b/plugins/activedirectory/locale/pt_BR/webyast-activedirectory.po
@@ -1,71 +1,72 @@
-# Copyright (C) 2006 SuSE Linux Products GmbH, Nuernberg
-# This file is distributed under the same license as the package.
+# @TITLE@
+# Copyright (C) 2006, SUSE Linux GmbH, Nuremberg
 #
+# This file is distributed under the same license as @PACKAGE@ package. FIRST
+#
+# Luiz Fernando Ranghetti <elchevive@opensuse.org>, 2011.
 msgid ""
 msgstr ""
-"Project-Id-Version: webyast-activedirectory-ui\n"
-"POT-Creation-Date: 2010-08-18 10:18+0200\n"
-"PO-Revision-Date: 2010-08-26 09:31\n"
-"Last-Translator: Novell Language <language@novell.com>\n"
-"Language-Team: Novell Language <language@novell.com>\n"
+"Project-Id-Version: @PACKAGE@\n"
+"Report-Msgid-Bugs-To: \n"
+"POT-Creation-Date: 2012-06-07 15:20+0200\n"
+"PO-Revision-Date: 2012-10-01 12:00-0300\n"
+"Last-Translator: Isis Binder <isis.binder@gmail.com>\n"
+"Language-Team: Brazilian Portuguese <opensuse-pt@opensuse.org>\n"
+"Language: pt_BR\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"X-Generator: Lokalize 1.2\n"
 "Plural-Forms: nplurals=2; plural=n>1;\n"
 
-#: app/controllers/activedirectory_controller.rb:40 ./app/controllers/activedirectory_controller.rb:40
-msgid "Cannot read Active Directory client configuraton."
-msgstr "Impossível ler configuração do cliente do Active Directory."
+msgid "Account settings"
+msgstr "Configurações da conta"
 
-#: app/controllers/activedirectory_controller.rb:55 ./app/controllers/activedirectory_controller.rb:55
-msgid "Active Directory client configuraton successfully written."
-msgstr "Configuração do cliente do Active Directory gravada com êxito."
-
-#: app/controllers/activedirectory_controller.rb:64 ./app/controllers/activedirectory_controller.rb:64
-msgid "Machine is not member of given domain. Enter the credentials needed for join."
-msgstr "A máquina não é membro do domínio especificado. Digite as credenciais necessárias para entrar."
-
-#: app/controllers/activedirectory_controller.rb:70 ./app/controllers/activedirectory_controller.rb:70
-msgid "Error while joining Active Directory domain: %s"
-msgstr "Erro ao entrar no domínio do Active Directory: %s"
-
-#: app/controllers/activedirectory_controller.rb:73 ./app/controllers/activedirectory_controller.rb:73
-msgid "Error while leaving Active Directory domain: %s"
-msgstr "Erro ao sair do domínio do Active Directory: %s"
-
-#: app/controllers/activedirectory_controller.rb:76 ./app/controllers/activedirectory_controller.rb:76
-msgid "Error while saving Active Directory client configuration."
-msgstr "Erro ao gravar configuração do cliente do Active Directory."
-
-#: app/views/activedirectory/index.html.erb:32 ./app/views/activedirectory/index.html.erb:32
-msgid "This field is required."
-msgstr "Este campo é obrigatório."
-
-#: app/views/activedirectory/index.html.erb:57 ./app/views/activedirectory/index.html.erb:57 ./shortcuts.yml:6
 msgid "Active Directory"
 msgstr "Active Directory"
 
-#: app/views/activedirectory/index.html.erb:69 ./app/views/activedirectory/index.html.erb:69
-msgid "Enable Authentication of AD users"
-msgstr "Habilitar Autenticação de usuários do AD"
-
-#: app/views/activedirectory/index.html.erb:72 ./app/views/activedirectory/index.html.erb:72
 msgid "Active Directory Domain"
 msgstr "Domínio do Active Directory"
 
-#: app/views/activedirectory/index.html.erb:79 ./app/views/activedirectory/index.html.erb:79
-msgid "Adminstrator User Name"
-msgstr "Nome de Usuário do Administrador"
+msgid "Active Directory client configuraton successfully written."
+msgstr "A configuração do cliente Active Directory foi salva com sucesso."
 
-#: app/views/activedirectory/index.html.erb:83 ./app/views/activedirectory/index.html.erb:83
+msgid "Administrator User Name"
+msgstr "Nome de usuário do administrador"
+
+msgid "Cannot read Active Directory client configuraton."
+msgstr "Não foi possível ler a configuração do cliente Active Directory."
+
+msgid "Enable Authentication of AD users"
+msgstr "Habilitar a autenticação dos usuários Active Directory"
+
+msgid "Error while joining Active Directory domain: %s"
+msgstr "Erro ao entrar no domínio Active Directory: %s"
+
+msgid "Error while leaving Active Directory domain: %s"
+msgstr "Erro ao sair do domínio Active Directory: %s"
+
+msgid "Error while saving Active Directory client configuration."
+msgstr "Erro ao salvar a configuração do cliente Active Directory."
+
+msgid "Machine Account"
+msgstr "Conta da máquina"
+
+msgid ""
+"Machine is not member of given domain. Enter the credentials needed for join."
+msgstr ""
+"A máquina não é membro do domínio fornecido. Informe as credenciais "
+"necessárias para entrar no domínio."
+
+# password dialog title
 msgid "Password"
 msgstr "Senha"
 
-#: app/views/activedirectory/index.html.erb:87 ./app/views/activedirectory/index.html.erb:87
-msgid "Machine Account"
-msgstr "Conta da Máquina"
+msgid "Please wait"
+msgstr "Por favor, aguarde"
 
-#: ./shortcuts.yml:7
-msgid "Configure the connection to Active Directory"
-msgstr "Configurar a conexão com o Active Directory"
+msgid "This field is required."
+msgstr "É necessário preencher este campo."
 
+#~ msgid "Configure the connection to Active Directory"
+#~ msgstr "Configure a conexão ao Active Directory"
