--- a/plugins/activedirectory/locale/zh_CN/webyast-activedirectory.po
+++ b/plugins/activedirectory/locale/zh_CN/webyast-activedirectory.po
@@ -1,71 +1,70 @@
-# Copyright (C) 2006 SuSE Linux Products GmbH, Nuernberg
-# This file is distributed under the same license as the package.
+# @TITLE@
+# Copyright (C) 2006, SUSE Linux GmbH, Nuremberg
 #
+# This file is distributed under the same license as @PACKAGE@ package. FIRST
+#
+# hillwood <hillwoodroc@gmail.com>, 2012.
 msgid ""
 msgstr ""
-"Project-Id-Version: webyast-activedirectory-ui\n"
-"POT-Creation-Date: 2010-08-18 10:18+0200\n"
-"PO-Revision-Date: 2010-08-26 09:33\n"
-"Last-Translator: Novell Language <language@novell.com>\n"
-"Language-Team: Novell Language <language@novell.com>\n"
+"Project-Id-Version: @PACKAGE@\n"
+"Report-Msgid-Bugs-To: \n"
+"POT-Creation-Date: 2012-06-07 15:20+0200\n"
+"PO-Revision-Date: 2012-07-05 17:01+0800\n"
+"Last-Translator: Marguerite Su\n"
+"Language-Team: Chinese Simplified <kde-i18n-doc@kde.org>\n"
+"Language: zh_CN\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=1; plural=0;\n"
+"X-Generator: Lokalize 1.4\n"
+"Plural-Forms: nplurals=2; plural=(n!=1);\n"
 
-#: app/controllers/activedirectory_controller.rb:40 ./app/controllers/activedirectory_controller.rb:40
-msgid "Cannot read Active Directory client configuraton."
-msgstr "无法读取 Active Directory 客户端配置。"
+msgid "Account settings"
+msgstr "账户设置"
 
-#: app/controllers/activedirectory_controller.rb:55 ./app/controllers/activedirectory_controller.rb:55
-msgid "Active Directory client configuraton successfully written."
-msgstr "Active Directory 客户端配置写入成功。"
-
-#: app/controllers/activedirectory_controller.rb:64 ./app/controllers/activedirectory_controller.rb:64
-msgid "Machine is not member of given domain. Enter the credentials needed for join."
-msgstr "计算机不是给定域成员。请输入连接所需的身份凭证。"
-
-#: app/controllers/activedirectory_controller.rb:70 ./app/controllers/activedirectory_controller.rb:70
-msgid "Error while joining Active Directory domain: %s"
-msgstr "加入 Active Directory 域时出错：%s"
-
-#: app/controllers/activedirectory_controller.rb:73 ./app/controllers/activedirectory_controller.rb:73
-msgid "Error while leaving Active Directory domain: %s"
-msgstr "离开 Active Directory 域时出错：%s"
-
-#: app/controllers/activedirectory_controller.rb:76 ./app/controllers/activedirectory_controller.rb:76
-msgid "Error while saving Active Directory client configuration."
-msgstr "保存 Active Directory 客户端配置时出错。"
-
-#: app/views/activedirectory/index.html.erb:32 ./app/views/activedirectory/index.html.erb:32
-msgid "This field is required."
-msgstr "此字段是必需的。"
-
-#: app/views/activedirectory/index.html.erb:57 ./app/views/activedirectory/index.html.erb:57 ./shortcuts.yml:6
 msgid "Active Directory"
-msgstr "Active Directory"
+msgstr "活动目录"
 
-#: app/views/activedirectory/index.html.erb:69 ./app/views/activedirectory/index.html.erb:69
-msgid "Enable Authentication of AD users"
-msgstr "启用 AD 用户的身份验证"
-
-#: app/views/activedirectory/index.html.erb:72 ./app/views/activedirectory/index.html.erb:72
 msgid "Active Directory Domain"
-msgstr "Active Directory 域"
+msgstr "活动目录域"
 
-#: app/views/activedirectory/index.html.erb:79 ./app/views/activedirectory/index.html.erb:79
-msgid "Adminstrator User Name"
+msgid "Active Directory client configuraton successfully written."
+msgstr "已成功写入活动目录客户端设置"
+
+msgid "Administrator User Name"
 msgstr "管理员用户名"
 
-#: app/views/activedirectory/index.html.erb:83 ./app/views/activedirectory/index.html.erb:83
+msgid "Cannot read Active Directory client configuraton."
+msgstr "无法读取活动目录客户端配置"
+
+msgid "Enable Authentication of AD users"
+msgstr "激活 AD 用户认证。"
+
+msgid "Error while joining Active Directory domain: %s"
+msgstr "加入活动目录域时出错： %s"
+
+msgid "Error while leaving Active Directory domain: %s"
+msgstr "离开活动目录域出错：%s"
+
+msgid "Error while saving Active Directory client configuration."
+msgstr "保存活动目录客户端配制出错。"
+
+msgid "Machine Account"
+msgstr "机器帐户"
+
+msgid ""
+"Machine is not member of given domain. Enter the credentials needed for join."
+msgstr "该机器不是指定域的成员，请输入用于连接所需的凭据。"
+
+# password dialog title
 msgid "Password"
 msgstr "口令"
 
-#: app/views/activedirectory/index.html.erb:87 ./app/views/activedirectory/index.html.erb:87
-msgid "Machine Account"
-msgstr "计算机帐户"
+msgid "Please wait"
+msgstr "请稍候"
 
-#: ./shortcuts.yml:7
-msgid "Configure the connection to Active Directory"
-msgstr "配置 Active Directory 连接"
+msgid "This field is required."
+msgstr "此字段不能为空。"
 
+#~ msgid "Configure the connection to Active Directory"
+#~ msgstr "配制与活动目录的连接"
