--- a/plugins/activedirectory/locale/zh_TW/webyast-activedirectory.po
+++ b/plugins/activedirectory/locale/zh_TW/webyast-activedirectory.po
@@ -1,71 +1,70 @@
-# Copyright (C) 2006 SuSE Linux Products GmbH, Nuernberg
-# This file is distributed under the same license as the package.
+# @TITLE@
+# Copyright (C) 2006, SUSE Linux GmbH, Nuremberg
 #
+# This file is distributed under the same license as @PACKAGE@ package. FIRST
+#
+# Ray Chen <swyear@opensuse.org>, 2012.
 msgid ""
 msgstr ""
-"Project-Id-Version: webyast-activedirectory-ui\n"
-"POT-Creation-Date: 2010-08-18 10:18+0200\n"
-"PO-Revision-Date: 2010-08-26 09:34\n"
-"Last-Translator: Novell Language <language@novell.com>\n"
-"Language-Team: Novell Language <language@novell.com>\n"
+"Project-Id-Version: @PACKAGE@\n"
+"Report-Msgid-Bugs-To: \n"
+"POT-Creation-Date: 2012-06-07 15:20+0200\n"
+"PO-Revision-Date: 2012-05-22 16:20+0800\n"
+"Last-Translator: Ray Chen <swyear@opensuse.org>\n"
+"Language-Team: Chinese Traditional <kde-i18n-doc@kde.org>\n"
+"Language: zh_TW\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"X-Generator: Lokalize 1.4\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
 
-#: app/controllers/activedirectory_controller.rb:40 ./app/controllers/activedirectory_controller.rb:40
-msgid "Cannot read Active Directory client configuraton."
-msgstr "無法讀取 Active Directory 用戶端組態。"
+msgid "Account settings"
+msgstr "帳戶設定"
 
-#: app/controllers/activedirectory_controller.rb:55 ./app/controllers/activedirectory_controller.rb:55
-msgid "Active Directory client configuraton successfully written."
-msgstr "已成功寫入 Active Directory 用戶端組態。"
-
-#: app/controllers/activedirectory_controller.rb:64 ./app/controllers/activedirectory_controller.rb:64
-msgid "Machine is not member of given domain. Enter the credentials needed for join."
-msgstr "機器不是指定網域的成員。請輸入加入網域所需的身分證明。"
-
-#: app/controllers/activedirectory_controller.rb:70 ./app/controllers/activedirectory_controller.rb:70
-msgid "Error while joining Active Directory domain: %s"
-msgstr "加入 Active Directory 網域 %s 時發生錯誤"
-
-#: app/controllers/activedirectory_controller.rb:73 ./app/controllers/activedirectory_controller.rb:73
-msgid "Error while leaving Active Directory domain: %s"
-msgstr "離開 Active Directory 網域 %s 時發生錯誤"
-
-#: app/controllers/activedirectory_controller.rb:76 ./app/controllers/activedirectory_controller.rb:76
-msgid "Error while saving Active Directory client configuration."
-msgstr "儲存 Active Directory 用戶端組態時發生錯誤。"
-
-#: app/views/activedirectory/index.html.erb:32 ./app/views/activedirectory/index.html.erb:32
-msgid "This field is required."
-msgstr "此欄位是必要的。"
-
-#: app/views/activedirectory/index.html.erb:57 ./app/views/activedirectory/index.html.erb:57 ./shortcuts.yml:6
 msgid "Active Directory"
-msgstr "Active Directory"
+msgstr ""
 
-#: app/views/activedirectory/index.html.erb:69 ./app/views/activedirectory/index.html.erb:69
+msgid "Active Directory Domain"
+msgstr "Active Directory 領域"
+
+msgid "Active Directory client configuraton successfully written."
+msgstr "Active Directory 客戶端組態已成功寫入。"
+
+msgid "Administrator User Name"
+msgstr "管理員使用者名稱"
+
+msgid "Cannot read Active Directory client configuraton."
+msgstr "無法讀取 Active Directory 客戶端組態。"
+
 msgid "Enable Authentication of AD users"
 msgstr "啟用 AD 使用者驗證"
 
-#: app/views/activedirectory/index.html.erb:72 ./app/views/activedirectory/index.html.erb:72
-msgid "Active Directory Domain"
-msgstr "Active Directory 網域"
+msgid "Error while joining Active Directory domain: %s"
+msgstr "當加入 Active Directory 領域時發生錯誤：%s"
 
-#: app/views/activedirectory/index.html.erb:79 ./app/views/activedirectory/index.html.erb:79
-msgid "Adminstrator User Name"
-msgstr "管理員使用者名稱"
+msgid "Error while leaving Active Directory domain: %s"
+msgstr "當離開 Active Directory 領域時發生錯誤：%s"
 
-#: app/views/activedirectory/index.html.erb:83 ./app/views/activedirectory/index.html.erb:83
-msgid "Password"
-msgstr "密碼"
+msgid "Error while saving Active Directory client configuration."
+msgstr "當儲存 Active Directory 客戶端組態時發生錯誤。"
 
-#: app/views/activedirectory/index.html.erb:87 ./app/views/activedirectory/index.html.erb:87
 msgid "Machine Account"
 msgstr "機器帳戶"
 
-#: ./shortcuts.yml:7
-msgid "Configure the connection to Active Directory"
-msgstr "設定 Active Directory 連線"
+msgid "Machine is not member of given domain. Enter the credentials needed for join."
+msgstr "機器並非給定領域的成員。輸入加入所需要的證書。"
 
+# password dialog title
+msgid "Password"
+msgstr "密碼"
+
+msgid "Please wait"
+msgstr "請稍候"
+
+msgid "This field is required."
+msgstr "此區域是必要的。"
+
+#~| msgid "Configure the current scheme."
+#~ msgid "Configure the connection to Active Directory"
+#~ msgstr "設定連線到 Active Directory"
